--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "eyesofpriestess",
+  "name": "new-covenant",
   "version": "0.0.0",
   "private": true,
   "type": "module",
@@ -9,22 +9,21 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview",
-    "lint": "eslint . --fix",
-    "format": "prettier --write src/"
+    "preview": "vite preview"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.1.16",
+    "lucide-vue-next": "^0.548.0",
+    "tailwindcss": "^4.1.16",
     "vue": "^3.5.22"
   },
   "devDependencies": {
-    "@eslint/js": "^9.33.0",
+    "@tailwindcss/postcss": "^4.1.16",
     "@vitejs/plugin-vue": "^6.0.1",
-    "@vue/eslint-config-prettier": "^10.2.0",
-    "eslint": "^9.33.0",
-    "eslint-plugin-vue": "~10.4.0",
-    "globals": "^16.3.0",
-    "prettier": "3.6.2",
-    "vite": "^7.1.7",
-    "vite-plugin-vue-devtools": "^8.0.2"
-  }
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.6",
+    "vite": "^7.1.11",
+    "vite-plugin-vue-devtools": "^8.0.3"
+  },
+  "packageManager": "pnpm@10.20.0+sha512.cf9998222162dd85864d0a8102e7892e7ba4ceadebbf5a31f9c2fce48dfce317a9c53b9f6464d1ef9042cba2e02ae02a9f7c143a2b438cd93c91840f0192b9dd"
 }
